index.html update

--- a/team.html
+++ b/team.html
@@ -54,108 +54,111 @@
                 </aside>
             
                 <main class="main">
-                    <nav class="breadcrumbs">
-                        <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
-                        <li class="breadcrumbs__item">Экипаж</li>
-                    </nav>
-                    <h1 class="main__title">Экипаж</h1>
-                    <ul class="crew">
-                        <li class="profile">
-                            <img src="img/crew/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Белов Алексей Вадимович</div>
-                                <div class="person__position">Главный пилот</div>
-                                <div class="person__bio">
-                                    Высокий профессионализм, честь
-                                    и отвага - все это характеристики
-                                    главного пилота Белова А.В. На его
-                                    счету более 700 полетов. Награжден за
-                                    мужество и отвагу указом президента.
-                                </div>
-                            </div>
-                        </li>
-                        <li class="profile">
-                            <img src="img/crew/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Сухарина Инна Николаевна</div>
-                                <div class="person__position">Бортпроводник</div>
-                                <div class="person__bio">
-                                    Благодаря деятельности этого
-                                    человека, на борту самолета клиенты
-                                    чувствуют себя, как дома. Инна
-                                    Николаевна чутко относится ко всем
-                                    требованиям клиентов, очень любит
-                                    детей и всячески помогает сделать
-                                    полет комфортным и приятным.
-                                </div>
-                            </div>
-                        </li>
-                        <li class="profile">
-                            <img src="img/crew/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Лещ Борис Анатольевич</div>
-                                <div class="person__position">Авиатехник</div>
-                                <div class="person__bio">
-                                    Человек с золотыми руками, инженер
-                                    и конструктор от Бога! Борис
-                                    Анатольевич работает уже более 50
-                                    лет и на своем веку видел, как из
-                                    старых моделей самолетов
-                                    появлялись настоящие авиа шедевры.
-                                </div>
-                            </div>
-                        </li>
-                        <li class="profile">
-                            <img src="img/crew/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Дигангидзе Элина Даниловна</div>
-                                <div class="person__position">Диспетчер</div>
-                                <div class="person__bio">
-                                    Ей присущ внимательный подход к
-                                    расчетам, а отменная память удивляет
-                                    даже самых опытных членов экипажа.
-                                    За 22 года работы она стажировала
-                                    более 100 диспетчеров для работы в
-                                    крупнейших аэропортах страны. Знает
-                                    в совершенстве 5 иностранных языков.
-                                </div>
-                            </div>
-                        </li>
-                        <li class="profile">
-                            <img src="img/crew/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Следь Елена Николаевна</div>
-                                <div class="person__position">Старший бортпроводник</div>
-                                <div class="person__bio">
-                                    Вежливая улыбка, внимательность к
-                                    деталям и большой опыт работы — это
-                                    лишь малая часть достоинств Елены
-                                    Николаевны. Старший бортпроводник
-                                    задает тон всей поездке, поэтому
-                                    клиенты, которые летят с ней,
-                                    заряжаются отличным настроением и
-                                    гармонией.
-                                </div>
-                            </div>
-                        </li>
-                        <li class="profile">
-                            <img src="img/crew/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
-                            <div class="person">
-                                <div class="person__name">Нестеренко Юрий Афанасьевич</div>
-                                <div class="person__position">Второй пилот</div>
-                                <div class="person__bio">
-                                    Правая рука главного пилота, опытный
-                                    и отважный помощник. О своей работе
-                                    в шутку говорит так: "Наше дело
-                                    правое, не мешать левому". Опыт
-                                    работы составляет 18 лет,
-                                    внимательно относится ко всем
-                                    деталям и считает свою работу —
-                                    делом жизни.
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="container">
+                        <nav class="breadcrumbs">
+                            <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
+                            <li class="breadcrumbs__item">Экипаж</li>
+                        </nav>
+                        <h1 class="main__title">Экипаж</h1>
+                        <ul class="crew">
+                            <li class="profile">
+                                <img src="img/crew/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Белов Алексей Вадимович</div>
+                                    <div class="person__position">Главный пилот</div>
+                                    <div class="person__bio">
+                                        Высокий профессионализм, честь
+                                        и отвага - все это характеристики
+                                        главного пилота Белова А.В. На его
+                                        счету более 700 полетов. Награжден за
+                                        мужество и отвагу указом президента.
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="profile">
+                                <img src="img/crew/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Сухарина Инна Николаевна</div>
+                                    <div class="person__position">Бортпроводник</div>
+                                    <div class="person__bio">
+                                        Благодаря деятельности этого
+                                        человека, на борту самолета клиенты
+                                        чувствуют себя, как дома. Инна
+                                        Николаевна чутко относится ко всем
+                                        требованиям клиентов, очень любит
+                                        детей и всячески помогает сделать
+                                        полет комфортным и приятным.
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="profile">
+                                <img src="img/crew/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Лещ Борис Анатольевич</div>
+                                    <div class="person__position">Авиатехник</div>
+                                    <div class="person__bio">
+                                        Человек с золотыми руками, инженер
+                                        и конструктор от Бога! Борис
+                                        Анатольевич работает уже более 50
+                                        лет и на своем веку видел, как из
+                                        старых моделей самолетов
+                                        появлялись настоящие авиа шедевры.
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="profile">
+                                <img src="img/crew/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Дигангидзе Элина Даниловна</div>
+                                    <div class="person__position">Диспетчер</div>
+                                    <div class="person__bio">
+                                        Ей присущ внимательный подход к
+                                        расчетам, а отменная память удивляет
+                                        даже самых опытных членов экипажа.
+                                        За 22 года работы она стажировала
+                                        более 100 диспетчеров для работы в
+                                        крупнейших аэропортах страны. Знает
+                                        в совершенстве 5 иностранных языков.
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="profile">
+                                <img src="img/crew/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Следь Елена Николаевна</div>
+                                    <div class="person__position">Старший бортпроводник</div>
+                                    <div class="person__bio">
+                                        Вежливая улыбка, внимательность к
+                                        деталям и большой опыт работы — это
+                                        лишь малая часть достоинств Елены
+                                        Николаевны. Старший бортпроводник
+                                        задает тон всей поездке, поэтому
+                                        клиенты, которые летят с ней,
+                                        заряжаются отличным настроением и
+                                        гармонией.
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="profile">
+                                <img src="img/crew/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
+                                <article class="person">
+                                    <div class="person__name">Нестеренко Юрий Афанасьевич</div>
+                                    <div class="person__position">Второй пилот</div>
+                                    <div class="person__bio">
+                                        Правая рука главного пилота, опытный
+                                        и отважный помощник. О своей работе
+                                        в шутку говорит так: "Наше дело
+                                        правое, не мешать левому". Опыт
+                                        работы составляет 18 лет,
+                                        внимательно относится ко всем
+                                        деталям и считает свою работу —
+                                        делом жизни.
+                                    </div>
+                                </article>
+                            </li>
+                        </ul>
+                    </div>
+                   
                 </main>
             </div>
         </div>
