--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                             </p>
                             <ul class="company__list">
                                 <li class="company__item">
-                                        • Частные лица — туристы и путешественники, как самостоятельные, так и организованные турфирмами.
+                                    Частные лица — туристы и путешественники, как самостоятельные, так и организованные турфирмами.
                                 </li>
                                 <li class="company__item">
-                                        • Коммерческие организации, которые отправляют своих сотрудников в командировки. За счет отлаженной логистики мы готовы предложить наиболее выгодные цены.
+                                    Коммерческие организации, которые отправляют своих сотрудников в командировки. За счет отлаженной логистики мы готовы предложить наиболее выгодные цены.
                                 </li>
                             </ul>
                             <p class="text">
@@ -83,7 +83,9 @@
                                 Наши аналитики исследуют рынок и помогают составить оптимальные маршруты, с учетом особенностей региона и других факторов.
                                 
                                 Наши постоянные клиенты участвуют в бонусной программе и при накоплении достаточной суммы на своем виртуальном счету, могут оплатить билет бонусными баллами.
+
                                 Мы будем рады видеть вас среди наших клиентов!
+                                
                             </p>
                         </article>
                         <div class="booking">
