dropdown menu triangle

--- a/team.html
+++ b/team.html
@@ -21,6 +21,7 @@
                     <span class="dropdown">
                         <button class="dropdown__button">График работы</button>
                         <span class="dropdown__content">
+                            <div class="dropdown__triangle"></div>
                             <div class="workHours">пн-вс: 09:00-20:00</div>
                             <div class="lunch">обед: 14:00-14:30</div>
                         </span>
