--- a/intro.html
+++ b/intro.html
@@ -13,7 +13,13 @@
     <div class="wrapper">
         <div class="content">
             <img src="img/intro/logo-intro.png" alt="logo" class="logo--intro">
-            <button class="button--intro">Перейти на сайт</button>
+            <button class="button--intro">
+                <div class="button__text">
+                    Перейти на сайт
+                </div>
+                <div class="button__img"> </div>
+                <!-- <img src="/img/intro/plane.png" alt="plane" class="button__img"> -->
+            </button>
         </div>
     </div>
     
