--- a/team.html
+++ b/team.html
@@ -182,27 +182,27 @@
                 <ul class="footer__links">
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__vk src="img/social-sprite.png" alt="рис.ВК">
+                            <img class=footer__vk src="img/vk.png" alt="рис.ВК">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__fb src="img/social-sprite.png" alt="рис.ФБ">
+                            <img class=footer__fb src="img/fb.png" alt="рис.ФБ">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__google src="img/social-sprite.png" alt="рис.Г">
+                            <img class=footer__google src="img/google.png" alt="рис.Г">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__twitter src="img/social-sprite.png" alt="рис.Тв">
+                            <img class=footer__twitter src="img/twitter.png" alt="рис.Тв">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__mail src="img/social-sprite.png" alt="рис.М">
+                            <img class=footer__mail src="img/mail.png" alt="рис.М">
                         </a>                       
                     </li>
                 </ul>
@@ -210,4 +210,3 @@
         </div>
     </footer>
 </body>
-</html>
