intro title rename

--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/intro.css">
-    <title>Домашнее задание №3: Приветствие</title>
+    <title>Добро пожаловать в Air Planet!</title>
 </head>
 <body>
     <div class="wrapper">
@@ -18,7 +18,6 @@
                     Перейти на сайт
                 </div>
                 <div class="button__img"> </div>
-                <!-- <img src="/img/intro/plane.png" alt="plane" class="button__img"> -->
             </button>
         </div>
     </div>
