main page p margin

--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@
                                 </li>
                             </ul>
                             <p class="text">
-                                Поездки в столицы европейских стран осуществляются без пересадок. На дальние расстояния мы предлагаем оптимальные маршруты, с тщательным расчетом времени пересадки.
-
-                                Оплата билетов осуществляется любым удобным способом – банковской картой, денежным переводом или наличными. Регулярно проводятся акции и скидки, особенно на раннее бронирование и оптовые заказы.
-                                
-                                Наши аналитики исследуют рынок и помогают составить оптимальные маршруты, с учетом особенностей региона и других факторов.
-                                
-                                Наши постоянные клиенты участвуют в бонусной программе и при накоплении достаточной суммы на своем виртуальном счету, могут оплатить билет бонусными баллами.
-
-                                Мы будем рады видеть вас среди наших клиентов!
-
+                                    Поездки в столицы европейских стран осуществляются без пересадок. На дальние расстояния мы предлагаем оптимальные маршруты, с тщательным расчетом времени пересадки.
+                            </p>        
+                            <p class="text">
+                                    Оплата билетов осуществляется любым удобным способом – банковской картой, денежным переводом или наличными. Регулярно проводятся акции и скидки, особенно на раннее бронирование и оптовые заказы.
+                            </p>
+                            <p class="text">
+                                    Наши аналитики исследуют рынок и помогают составить оптимальные маршруты, с учетом особенностей региона и других факторов.
+                            </p>
+                            <p class="text">
+                                    Наши постоянные клиенты участвуют в бонусной программе и при накоплении достаточной суммы на своем виртуальном счету, могут оплатить билет бонусными баллами.
+                            </p>
+                            <p class="text">
+                                    Мы будем рады видеть вас среди наших клиентов!
                             </p>
                         </article>
                         <div class="booking">
