team nav update

--- a/team.html
+++ b/team.html
@@ -31,23 +31,23 @@
         </header>
         <div class="content">
             <div class="container clearfix">
-                <aside class=asideBar>
+                <aside class=aside>
                     <ul class="navigation">
                         <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div>
+                            <a href="http://ya.ru" class="navigation__link navigation__icon_plane">
+                                <!-- <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div> -->
                                 <span class="navigation__name">Главная</span>
                             </a>
                         </li>
                         <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div>
+                            <a href="http://ya.ru" class="navigation__link navigation__icon_cap">
+                                <!-- <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div> -->
                                 <span class="navigation__name">Экипаж</span>
                             </a>
                         </li>
                         <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <div class="navigation__icon navigation__icon_star" alt="mainLink"></div>
+                            <a href="http://ya.ru" class="navigation__link navigation__icon_star">
+                                <!-- <div class="navigation__icon navigation__icon_star" alt="mainLink"></div> -->
                                 <span class="navigation__name">Отзывы</span>
                             </a>
                         </li>
