replacing and renaming css files, popup animation, some fixes

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="container clearfix">
-                <a href="http://ya.ru" class="homeLink_header">
+                <a href="main.html" class="homeLink_header">
                     <img src="img/logo_header.png" alt="logo" class=logo>
                 </a>
                 <div class=info>
@@ -34,26 +34,23 @@
         <div class="content">
             <div class="container clearfix">
                 <aside class=aside>
-                    <ul class="navigation">
+                    <nav class="navigation">
                         <li class="navigation__item">
                             <a href="main.html" class="navigation__link navigation__icon_plane">
-                                <!-- <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div> -->
                                 <span class="navigation__name">Главная</span>
                             </a>
                         </li>
                         <li class="navigation__item">
                             <a href="team.html" class="navigation__link navigation__icon_cap">
-                                <!-- <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div> -->
                                 <span class="navigation__name">Экипаж</span>
                             </a>
                         </li>
                         <li class="navigation__item">
                             <a href="feedback.html" class="navigation__link navigation__icon_star">
-                                <!-- <div class="navigation__icon navigation__icon_star" alt="mainLink"></div> -->
                                 <span class="navigation__name">Отзывы</span>
                             </a>
                         </li>
-                    </ul>
+                    </nav>
                 </aside>
         
                 <div class="main main--position">
@@ -145,38 +142,38 @@
                     <span class=bold>LoftSchool<span></a>.
                 Автор работы: <span class=bold>Данилов Антон</span>.
             </div>
-            <a href="http://ya.ru" class="homelink--footer">
+            <a href="main.html" class="homelink--footer">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
             </a>
             <div class="footer__social">
                 <div class="footer__title">Наши социальные сети</div>
-                <ul class="footer__links">
+                <nav class="footer__links">
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__vk src="img/vk.png" alt="рис.ВК">
+                            <img class=footer__vk src="img/vk.png" alt="Страница Air Planet ВКонтакте">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__fb src="img/fb.png" alt="рис.ФБ">
+                            <img class=footer__fb src="img/fb.png" alt="Страница Air Planet на Facebook">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__google src="img/google.png" alt="рис.Г">
+                            <img class=footer__google src="img/google.png" alt="Страница Air Planet в Google">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__twitter src="img/twitter.png" alt="рис.Тв">
+                            <img class=footer__twitter src="img/twitter.png" alt="Страница Air Planet в Twitter">
                         </a>                       
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
-                            <img class=footer__mail src="img/mail.png" alt="рис.М">
+                            <img class=footer__mail src="img/mail.png" alt="Страница Air Planet на Mail.ru">
                         </a>                       
                     </li>
-                </ul>
+                </nav>
             </div>
         </div>
     </footer>
