--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/intro.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Добро пожаловать в Air Planet!</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="content">
+    <div class="wrapper--intro">
+        <div class="content--intro">
             <img src="img/intro/logo-intro.png" alt="logo" class="logo--intro">
             <button class="button--intro">
                 <div class="button__text">
