intro button position, button link

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div class="wrapper--intro">
         <div class="content--intro">
             <img src="img/intro/logo-intro.png" alt="logo" class="logo--intro">
-            <button class="button--intro">
-                <div class="button__text">
-                    Перейти на сайт
-                </div>
-                <div class="button__img"> </div>
-            </button>
+            <a href="main.html">
+                <button class="button--intro">
+                    <div class="button__text">
+                        Перейти на сайт
+                    </div>
+                    <div class="button__img"> </div>
+                </button>
+            </a>    
         </div>
     </div>
     
