footer animation, main__title positioning

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Добро пожаловать в Air Planet!</title>
 </head>
 <body>
-    <div class="wrapper--intro">
-        <div class="content--intro">
+    <div class="introbackground">
+        <div class="content content--intro">
             <img src="img/intro/logo-intro.png" alt="logo" class="logo--intro">
             <a href="main.html">
                 <button class="button--intro">
