--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="container clearfix">
+            <div class="container">
                 <a href="main.html" class="homeLink_header">
                     <img src="img/logo_header.png" alt="logo" class=logo>
                 </a>
-                <div class=info>
+                <div class="info clearfix">
                     <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
                     <span class="dropdown">
                         <button class="dropdown__button">График работы</button>
