footer animation, main__title positioning

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
                 <a href="main.html" class="homeLink_header">
                     <img src="img/logo_header.png" alt="logo" class=logo>
                 </a>
-                <div class=info>
+                <div class="info">
                     <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
                     <span class="dropdown">
                         <button class="dropdown__button">График работы</button>
@@ -56,7 +56,7 @@
                 <div class="main main--position">
                     <div class="container clearfix">
                         <div class="main__header">
-                                <h1 class="main__title main__title--position">О компании</h1>
+                                <h1 class="main__title main__title--company main__title--position">О компании</h1>
                         </div>
                         <article class="company">
                             <p class="text">
