--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
                             <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                             <li class="breadcrumbs__item">Экипаж</li>
                         </nav>
-                        <h1 class="main__title">Экипаж</h1>
+                        <h1 class="main__title main__title--team">Экипаж</h1>
                         <ul class="crew">
                             <li class="profile">
                                 <img src="img/crew/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
