feed back radio

--- a/feedback.html
+++ b/feedback.html
@@ -159,10 +159,19 @@
                             <form action="" class="post__form">
                                 <p class="post__question">Отображать фото в отзыве?</p>
                                 <input class="radio" type="radio" name="post__radio" id="yes">
-                                    <label class=radio__label for="yes">Да</label>
+                                    <label class=radio__label for="yes">
+                                        <div class="bigcircle">
+                                                <div class="circle"></div>
+                                                <div class="radio__text">Да</div>
+                                        </div>
+                                    </label>
                                 <input class="radio" type="radio" name="post__radio" id="no">
-                                    <label class=radio__label for="no">Нет</label>
-                                <!-- <input class="post__input" firsttype="text" name="name" placeholder="Андрей"> -->
+                                <label class=radio__label for="no">
+                                        <div class="bigcircle">
+                                                <div class="circle"></div>
+                                                <div class="radio__text">Нет</div>
+                                        </div>
+                                    </label>
                             </form>
                         </div>
 
