--- a/feedback.html
+++ b/feedback.html
@@ -119,7 +119,7 @@
 
                     <div class="pagination">
                             <div class="pagination__current">Страница 1 из 7</div>
-                            <a class="pagination__item" href="#"></a>
+                            <a class="pagination__item" href="#">&lt;</a>
                             <a class="pagination__item active" href="#">1</a>
                             <a class="pagination__item" href="#">2</a>
                             <a class="pagination__item" href="#">3</a>
