pixel perfext failed

--- a/feedback.html
+++ b/feedback.html
@@ -158,14 +158,14 @@
                         <div class="post__left">
                             <form action="" class="post__form">
                                 <p class="post__question">Отображать фото в отзыве?</p>
-                                <input class="radio" type="radio" name="post__radio" id="yes">
+                                <input class="radio" type="radio" checked="checked" name="post__radio" id="yes">
                                     <label class=radio__label for="yes">
                                         <div class="bigcircle">
                                                 <div class="circle"></div>
                                                 <div class="radio__text">Да</div>
                                         </div>
                                     </label>
-                                <input class="radio" type="radio" name="post__radio" id="no">
+                                <input class="radio" type="radio" checked="checked" name="post__radio" id="no">
                                 <label class=radio__label for="no">
                                         <div class="bigcircle">
                                                 <div class="circle"></div>
