intro animation update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="button__text">
                         Перейти на сайт
                     </div>
-                    <div class="button__img"> </div>
+                    <!-- <div class="button__img"> </div> -->
                 </button>
             </a>    
         </div>
