pixel perfect update

--- a/feedback.html
+++ b/feedback.html
@@ -61,7 +61,7 @@
                             <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                             <li class="breadcrumbs__item">Отзывы</li>
                         </nav>
-                        <h1 class="main__title  main__title--team">Отзывы</h1>
+                        <h1 class="main__title  main__title--feedback">Отзывы</h1>
 
                         <ul class="feedback">
                             <li class="opinion">
@@ -140,11 +140,10 @@
                         
                         <div class="post__right">
                             <form action="" class="post__form">
-                                <p class="post__question">Ссылка на профиль VK:</p>
+                                <p class="post__question">Ссылка на профиль ВК</p>
                                 <input class="post__input" type="text" name="VK page" placeholder="vk.com/example">
                             </form>
                         </div>
-                        
                         <div class="post__middle">
                             <form action="" class="post__form">
                                 <p class="post__question">Текст отзыва</p>
