--- a/feedback.html
+++ b/feedback.html
@@ -133,7 +133,7 @@
                         <h3 class="post__title">Оставить отзыв</h3>
                         <div class="post__left">
                             <form action="" class="post__form">
-                                <p class="post__question">Ваше имя:</p>
+                                <p class="post__question">Ваше имя</p>
                                 <input class="post__input" firsttype="text" name="name" placeholder="Андрей">
                             </form>
                         </div>
@@ -154,7 +154,7 @@
                             </form>
                         </div>
                         
-                        <div class="post__left">
+                        <div class="post__select">
                             <form action="" class="post__form">
                                 <p class="post__question">Отображать фото в отзыве?</p>
                                 
@@ -175,7 +175,7 @@
                             </form>
                         </div>
 
-                        <div class="post__right">
+                        <div class="post__button">
                             <form action="">
                                 <input class="submit" type="submit" value="submit">
                                 <label for="" class="submit__label">
