feedback button pixelperfect

--- a/feedback.html
+++ b/feedback.html
@@ -180,10 +180,10 @@
                                 <input class="submit" type="submit" value="submit">
                                 <label for="" class="submit__label">
                                     <button class="submit__button">
-                                        <div class="button__text">
+                                        <div class="submit__text">
                                             Отправить
                                         </div>
-                                        <div class="button__img"> </div>
+                                        <div class="button__img"></div>
                                     </button>
                                 </label>
                             </form> 
