--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Air Planet: Экипаж</title>
+    <title>Air Planet: Отзывы</title>
 </head>
 <body>
     <div class="wrapper">
