--- a/feedback.html
+++ b/feedback.html
@@ -148,9 +148,7 @@
                             <form action="" class="post__form">
                                 <p class="post__question">Текст отзыва</p>
                                 <textarea class="post__input post__input--middle" name="message" id="" cols="30" rows="8"
-                                placeholder="Мне понравилось" >
-
-                                </textarea>    
+                                placeholder="Мне понравилось" ></textarea>    
                             </form>
                         </div>
                         
