--- a/main.html
+++ b/main.html
@@ -98,32 +98,32 @@
                             <p class="partners__title">Партнёры</p>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                    <img src="/img/logo/bmp.png" alt="bmp" class="partners__img">
+                                    <img src="./img/logo/bmp.png" alt="bmp" class="partners__img">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                    <img src="/img/logo/tetra.png" alt="tetra" class="partners__img">
+                                    <img src="./img/logo/tetra.png" alt="tetra" class="partners__img">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                    <img src="/img/logo/sibair.png" alt="sibair" class="partners__img">
+                                    <img src="./img/logo/sibair.png" alt="sibair" class="partners__img">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                    <img src="/img/logo/oneair.png" alt="oneair" class="partners__img">
+                                    <img src="./img/logo/oneair.png" alt="oneair" class="partners__img">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                    <img src="/img/logo/bingair.png" alt="bingair" class="partners__img">
+                                    <img src="./img/logo/bingair.png" alt="bingair" class="partners__img">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="#" class="partners__link">
-                                     <img src="/img/logo/ural.png" alt="ural" class="partners__img">
+                                     <img src="./img/logo/ural.png" alt="ural" class="partners__img">
                                 </a>
                             </li>
                         </ul>
